--- a/css/mobileClient.less
+++ b/css/mobileClient.less
@@ -113,6 +113,7 @@ font-family:Helvetica, Arial, sans-serif;
                     float:left;
                     margin-top:10px;
                     .leftButtons{
+                        float:left;
                         .pause{
                             span{
                                 cursor: pointer;
@@ -219,7 +220,7 @@ font-family:Helvetica, Arial, sans-serif;
                     }
                 .textfield{
                     font-family:Helvetica, Arial, sans-serif;
-                    resize:none;
+                    resize: none;
                     color: #071e2d;
                     padding:20px;
                     float:left;
@@ -228,6 +229,7 @@ font-family:Helvetica, Arial, sans-serif;
                     border-radius: 5px;
                     background-color: #c4c4c4;
                     text-align:left;
+                    overflow:hidden;
                     -webkit-box-shadow: inset -2px -2px 2px rgba(0,0,0,0.3); 
                     -moz-box-shadow: inset -2px -2px 2px rgba(0,0,0,0.3); 
                     -o-box-shadow: inset -2px -2px 2px rgba(0,0,0,0.3);
